# deepwiki-open

./: .env.example  .npmrc  Dockerfile  README.ja.md  README.md  docker-compose.yml  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
api/: README.md  agent_loop.py  api.py  bedrock_client.py  cag.py  config.py  data_pipeline.py  deepseek_client.py  google_embedder_client.py  main.py  openai_client.py  pyproject.toml  simple_chat.py  websocket_wiki.py
api/config/: embedder.json  generator.json  repo.json
api/tools/: agent_tools.py  embedder.py
src/app/: page.tsx
src/app/[owner]/[repo]/: page.tsx
src/app/api/wiki/projects/: route.ts
src/components/: Ask.tsx  ConfigurationModal.tsx  Mermaid.tsx  ModelSelectionModal.tsx  UserSelector.tsx
src/messages/: en.json  es.json  fr.json  ja.json  kr.json  pt-br.json  ru.json  vi.json  zh-tw.json  zh.json
src/utils/: websocketClient.ts
tests/: README.md  run_tests.py
