[project]
name = "deepwiki-open"
version = "1.0.0"
description = "AI-powered wiki generation for any GitHub, GitLab, or BitBucket repository."
license = { text = "MIT License" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.95.0,<1.0.0",
    "uvicorn[standard]>=0.21.1,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "google-genai>=1.0.0,<2.0.0",
    "tiktoken>=0.5.0,<1.0.0",
    "adalflow>=0.1.0,<2.0.0",
    "numpy>=1.24.0,<3.0.0",
    "faiss-cpu>=1.7.4,<2.0.0",
    "langid>=1.1.6,<2.0.0",
    "requests>=2.28.0,<3.0.0",
    "jinja2>=3.1.2,<4.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "openai>=1.76.2,<3.0.0",
    "ollama>=0.4.8,<1.0.0",
    "aiohttp>=3.8.4,<4.0.0",
    "boto3>=1.34.0,<2.0.0",
    "websockets>=11.0.3,<15.0.0",
    "azure-identity>=1.12.0,<2.0.0",
    "azure-core>=1.24.0,<2.0.0",
    "pyvis>=0.3.0,<1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]

[tool.uv]
package = false
